# cuda-raytracer

./: .gitignore  README.md  flake.nix
src/: CMakeLists.txt  cuda.h  framebuffer.h  hittable.h  linalg.h  main.cu  render.cu  render.h  sphere.h  vec3.h  world.h
